Removing spacing hack. No longer needed.

--- a/src/sgd/frontend/yeastgenome/static/scss/modules/_nested-lists.scss
+++ b/src/sgd/frontend/yeastgenome/static/scss/modules/_nested-lists.scss
@@ -1,6 +1,4 @@
 .nested-lists {
-    min-height: rem-calc(120);
-    padding-bottom: rem-calc(90);
 	i.fa { 
 		color: #47b; 
 		margin-right: 0.4em;
